--- a/index.html
+++ b/index.html
@@ -13,42 +13,105 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- Navbar -->
-    <div class="row no-margin border-bottom" id="navbar">
-      <div class="col-xl-2"></div>
-      <div class="col-xl-8">
-        <div class="row">
-          <div class="col-xl-3 d-flex justify-content-left">
-            <h1 class="pb-3 pt-3 pl-5 pr-5" id="name">Paul Ballas</h1>
+    <!-- Video -->
+    <video
+      plasinline="playsinline"
+      autoplay="autoplay"
+      muted="muted"
+      loop="loop"
+      id="Video"
+    >
+      <source src="assets/images/MyMovie.mp4" type="video/mp4" />
+    </video>
+    <!-- End Video -->
+    <div class="row no-gutters">
+      <div class="col-2" id="header2"></div>
+      <div class="col-8">
+        <nav class="navbar navbar-expand-lg bg-light sticky-top p-0">
+          <a class="navbar-brand pb-3 pt-3 pl-5 pr-5" href="index.html"
+            >Paul Ballas</a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarText"
+            aria-controls="navbarText"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse d-flex justify-content-end"
+            id="navbarText"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html"
+                  >About <span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="portfolio.html">Porftfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
           </div>
-          <div class="col-9 d-flex justify-content-end">
-            <a class="pl-3 pt-4" id="nav" href="index.html">About</a>
-            <a class="pl-3 pt-4" id="nav" href="portfolio.html">Portfolio</a>
-            <a class="pl-3 pt-4" id="nav" href="contact.html">Contact</a>
-          </div>
-        </div>
-        <div class="col-xl-2"></div>
+        </nav>
       </div>
+      <div class="col-2" id="header2"></div>
     </div>
-    <!-- End of Navbar -->
-    <main> 
-      <video plasinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" id="Video">
-        <source src="assets/images/MyMovie.mp4" type="video/mp4" />
-      </video>
-      <br />
-      <br />
-      <br />
 
-      <div class="container">
-        <div class="row">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic placeat
-          voluptas numquam deserunt, dolorum itaque porro tenetur nobis saepe
-          quia, soluta ratione doloremque debitis eligendi officia eveniet eius
-          autem enim.
+    <!-- End of Navbar -->
+    <br />
+    <br />
+    <main class="main-container" role="main">
+      <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8">
+          <div class="container d-inline-flex aboutme-container">
+            <div class="aboutmecontent">
+              <h2>About Me</h2>
+              <img
+                id="paul"
+                src="assets/images/pic.jpg"
+                alt="Paul Ballas Picture"
+                height="150"
+              />
+              <p class="bio-description">
+                Welcome to Paul Ballas' Bio webpage! Thanks for stopping by. If
+                at any point you'd like to reach me directly, please select the
+                'Contact' button above (estimated wait-time is 10 minutes).
+                <br />
+                <br />
+                By way of background, I am an Investment Banker who helps
+                healthcare institutions raise money by day and codes by night.
+                Please see the 'Portfolio' button above for examples of the
+                projects that I have been working on recently. <br />
+                <br />
+                However, I'm interested in many more interesting things than
+                just finance and programming. For example, I'm a drummer for two
+                musical projects, snowboarder, have experience recording and
+                mixing music and I love fitness. If you'd like to discuss any of
+                these topics or anything else, please don't hesitate to reach
+                out!
+              </p>
+            </div>
+          </div>
         </div>
+        <div class="col-2"></div>
       </div>
-    </div>
-  </main>
+      <br><br><br>
+      <!-- Sticky Footer -->
+      <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+        <div class="container text-center">
+          <small>Copyright &copy;</small>
+        </div>
+    
+    </main>
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
       integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
