--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Porftfolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
@@ -75,30 +75,21 @@
           <div class="container d-inline-flex aboutme-container">
             <div class="aboutmecontent">
               <h2>Contact</h2>
-              <img
-                id="paul"
-                src="assets/images/pic.jpg"
-                alt="Paul Ballas Picture"
-                height="150"
-              />
-              <p class="bio-description">
-                Welcome to Paul Ballas' Bio webpage! Thanks for stopping by. If
-                at any point you'd like to reach me directly, please select the
-                'Contact' button above (estimated wait-time is 10 minutes).
-                <br />
-                <br />
-                By way of background, I am an Investment Banker who helps
-                healthcare institutions raise money by day and codes by night.
-                Please see the 'Portfolio' button above for examples of the
-                projects that I have been working on recently. <br />
-                <br />
-                However, I'm interested in many more interesting things than
-                just finance and programming. For example, I'm a drummer for two
-                musical projects, snowboarder, have experience recording and
-                mixing music and I love fitness. If you'd like to discuss any of
-                these topics or anything else, please don't hesitate to reach
-                out!
-              </p>
+
+              <form>
+                <div class="form-group">
+                  <label for="formGroupExampleInput">Name</label>
+                  <input type="text" class="form-control" id="formGroupExampleInput" placeholder="John Smith">
+                </div>
+                <div class="form-group">
+                  <label for="formGroupExampleInput2">Email</label>
+                  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Example@gmail.com">
+                </div>
+                <div class="form-group">
+                  <label for="formGroupExampleInput2">Message</label>
+                  <input type="text" class="form-control pb-10 pt-3" id="formGroupExampleInput2" placeholder="Type your message here...">
+                </div>
+              </form>
             </div>
           </div>
         </div>
