adds the Portfolio tab

--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="form-group">
                   <label for="formGroupExampleInput2">Message</label>
-                  <input type="text" class="form-control pb-2 pt-3" id="formGroupExampleInput2" placeholder="Type your message here...">
+                  <input type="text" class="form-control" id="formGroupExampleInput3" placeholder="Type your message here...">
                 </div>
               </form>
             </div>
