--- a/portfolio.html
+++ b/portfolio.html
@@ -74,37 +74,87 @@
         <div class="col-8">
           <div class="container d-inline-flex aboutme-container">
             <div class="aboutmecontent">
-              <h2>About Me</h2>
-              <img
-                id="paul"
-                src="assets/images/pic.jpg"
-                alt="Paul Ballas Picture"
-                height="150"
-              />
-              <p class="bio-description">
-                Welcome to Paul Ballas' Bio webpage! Thanks for stopping by. If
-                at any point you'd like to reach me directly, please select the
-                'Contact' button above (estimated wait-time is 10 minutes).
-                <br />
-                <br />
-                By way of background, I am an Investment Banker who helps
-                healthcare institutions raise money by day and codes by night.
-                Please see the 'Portfolio' button above for examples of the
-                projects that I have been working on recently. <br />
-                <br />
-                However, I'm interested in many more interesting things than
-                just finance and programming. For example, I'm a drummer for two
-                musical projects, snowboarder, have experience recording and
-                mixing music and I love fitness. If you'd like to discuss any of
-                these topics or anything else, please don't hesitate to reach
-                out!
-              </p>
+              <h2 pb>Portfolio</h2>
+              <div class="row text-center" id="pictureRow1">
+                <div class="col-6">
+                  <div class="imgHolder">
+                    <img
+                      id="pic2"
+                      src="assets/images/Otter.jpg"
+                      alt="pic"
+                      height="150px"
+                    />      
+                    <span id="hangman">Hangman</span>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="imgHolder">
+                    <img
+                      id="pic2"
+                      src="assets/images/Otter.jpg"
+                      alt="pic"
+                      height="150px"
+                    />
+                    <span id="rpg">RPG Game</span>
+                  </div>
+                </div>
+              </div>
+              <div class="row text-center" id="pictureRow2">
+                <div class="col-6">
+                    <div class="imgHolder">
+                        <img
+                          id="pic2"
+                          src="assets/images/Otter.jpg"
+                          alt="pic"
+                          height="150px"
+                        />
+                        <span id="trivia">Trivia Game</span>
+                      </div>
+                </div>
+                <div class="col-6">
+                    <div class="imgHolder">
+                        <img
+                          id="pic2"
+                          src="assets/images/Otter.jpg"
+                          alt="pic"
+                          height="150px"
+                        />
+                        <span id="trivia">Trivia Game</span>
+                      </div>
+                </div>
+              </div>
+              <div class="row text-center" id="pictureRow3">
+                <div class="col-6">
+                    <div class="imgHolder">
+                        <img
+                          id="pic2"
+                          src="assets/images/Otter.jpg"
+                          alt="pic"
+                          height="150px"
+                        />
+                        <span id="rutgers">Rutgers Info Widgit</span>
+                      </div>
+
+                </div>
+                <div class="col-6">
+                <div class="imgHolder">
+                    <img
+                      id="pic2"
+                      src="assets/images/Otter.jpg"
+                      alt="pic"
+                      height="150px"
+                    />
+                    <span id="rps">Rock Paper Scissors</span>
+                  </div>
+                </div>
+              </div>
+
             </div>
           </div>
         </div>
         <div class="col-2"></div>
       </div>
-      <br><br><br>
+      <br><br><br><br> <br> <br>
       <!-- Sticky Footer -->
       <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
         <div class="container text-center">
