--- a/index.html
+++ b/index.html
@@ -87,15 +87,14 @@
                 'Contact' button above (estimated wait-time is 10 minutes).
                 <br />
                 <br />
-                By way of background, I am an Investment Banker who helps
+                I am an Investment Banker who helps
                 healthcare institutions raise money by day and codes by night.
                 Please see the 'Portfolio' button above for examples of the
-                projects that I have been working on recently. <br />
+                projects that I have been working on recently. More projects to come! <br />
                 <br />
-                However, I'm interested in many more interesting things than
-                just finance and programming. For example, I'm a drummer for two
-                musical projects, snowboarder, have experience recording and
-                mixing music and I love fitness. If you'd like to discuss any of
+                I'm interested in many more interesting things than
+                just finance and programming. For example: I'm a drummer and a songwriter (I'm currently involved in two musical projects, please reach out if you'd like to listen), I mix and produce musice, I'm a snowboarder, 
+                and I love health and fitness! If you'd like to discuss any of
                 these topics or anything else, please don't hesitate to reach
                 out!
               </p>
